BUG#35674: Range optimizer ignores conditions on inner tables in semi-join IN subqueries - Let range optimizer use such conditions.